--- a/css/agency.css
+++ b/css/agency.css
@@ -82,9 +82,9 @@ h6 {
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-    border-color: #f6bf01;
+    border-color: #000000;
     color: #fff;
-    background-color: #fec503;
+    background-color: #000000;
 }
 
 .btn-primary:active,
@@ -113,7 +113,7 @@ fieldset[disabled] .btn-primary.active {
 }
 
 .btn-primary .badge {
-    color: #fed136;
+    color: #000000;
     background-color: #fff;
 }
 
