--- a/css/agency.css
+++ b/css/agency.css
@@ -287,6 +287,7 @@ fieldset[disabled] .btn-xl.active {
 header {
     text-align: center;
     color: #000000;
+    font-weight: lighter;
     background-attachment: scroll;
     background-image: url(../img/header-bg.jpg);
     background-position: center center;
