--- a/css/agency.css
+++ b/css/agency.css
@@ -275,7 +275,7 @@ fieldset[disabled] .btn-xl.active {
     }
 
     .navbar-default.navbar-shrink {
-        padding: 10px 0;
+        padding: 8px 0;
         background-color: #fff;
     }
 
@@ -316,6 +316,7 @@ header .intro-text .intro-heading {
     margin-top:180px;
     text-align: center;
     margin-right: 70px;
+    color: #00000000;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 50px;
